--- a/composer.json
+++ b/composer.json
@@ -63,9 +63,7 @@
     },
     "scripts": {
         "auto-scripts": {
-            "cache:clear": "symfony-cmd",
-            "assets:install public": "php bin/console assets:install public"
-
+            "php bin/console assets:install public": "symfony-cmd"
         },
         "post-install-cmd": [
             "@auto-scripts"
