--- a/composer.json
+++ b/composer.json
@@ -63,7 +63,8 @@
     },
     "scripts": {
         "auto-scripts": {
-            "php bin/console assets:install public": "symfony-cmd"
+            "php bin/console assets:install public":
+            "php bin/console cache:clear"
         },
         "post-install-cmd": [
             "@auto-scripts"
