--- a/composer.json
+++ b/composer.json
@@ -62,16 +62,16 @@
         "symfony/polyfill-php82": "*"
     },
     "scripts": {
-        "auto-scripts": {
-            "php bin/console assets:install public":
-            "php bin/console cache:clear"
-        },
-        "post-install-cmd": [
-            "@auto-scripts"
-        ],
-        "post-update-cmd": [
-            "@auto-scripts"
-        ]
+    "auto-scripts": [
+        "php bin/console assets:install public",
+        "php bin/console cache:clear"
+    ],
+    "post-install-cmd": [
+        "@auto-scripts"
+    ],
+    "post-update-cmd": [
+        "@auto-scripts"
+    ]
     },
     "conflict": {
         "symfony/symfony": "*"
