--- a/composer.json
+++ b/composer.json
@@ -62,10 +62,10 @@
         "symfony/polyfill-php82": "*"
     },
     "scripts": {
-        "auto-scripts": [
-            "php bin/console assets:install public",
-            "php bin/console cache:clear"
-        ],
+        "auto-scripts": {
+            "cache:clear": "symfony-cmd",
+            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+        },
         "post-install-cmd": [
             "@auto-scripts"
         ],
@@ -73,7 +73,6 @@
             "@auto-scripts"
         ]
     },
-
     "conflict": {
         "symfony/symfony": "*"
     },
@@ -81,8 +80,7 @@
         "symfony": {
             "allow-contrib": false,
             "require": "7.1.*"
-        },
-        "public-dir": "public"
+        }
     },
     "require-dev": {
         "symfony/maker-bundle": "^1.60",
