--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "doctrine/orm": "^3.2",
         "dompdf/dompdf": "^3.1",
         "easycorp/easyadmin-bundle": "4.10",
+        "knplabs/knp-snappy-bundle": "^1.10",
         "lexik/jwt-authentication-bundle": "3.0",
         "stripe/stripe-php": "^15.7",
         "symfony/asset": "7.1.*",
@@ -78,7 +79,7 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "allow-contrib": true,
             "require": "7.1.*"
         }
     },
