--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "symfony/flex": "^2",
         "symfony/form": "7.1.*",
         "symfony/framework-bundle": "7.1.*",
+        "symfony/http-client": "7.1.*",
         "symfony/mailer": "7.1.*",
         "symfony/monolog-bundle": "^3.10",
         "symfony/runtime": "7.1.*",
@@ -32,6 +33,7 @@
         "symfony/validator": "7.1.*",
         "symfony/webpack-encore-bundle": "^2.2",
         "symfony/yaml": "7.1.*",
+        "symfonycasts/reset-password-bundle": "^1.23",
         "symfonycasts/verify-email-bundle": "^1.17"
     },
     "config": {
